--- a/README
+++ b/README
@@ -2,19 +2,13 @@
 
 Tiny, fast & funny HTTP server
 
-=== Why another web server ?
-Thin:
-* is 10% faster then Mongrel behind a load balancer like Nginx.
-* takes around 2MB less memory then Mongrel.
-* is 100% Ruby, no C extension.
-* is self contain, no dependencies.
-
-=== What's the catch ?
-The secret of Thin is that no threads are used. Everything is running in a single thread. For single threaded frameworks like Rails this makes sense, but might not be the case for others.
-
 === Installation
 
  sudo gem install thin --source http://code.macournoyer.com
+
+Or get the source at:
+
+ svn co http://code.macournoyer.com/svn/thin/trunk thin
 
 === Usage
 In your Rails app directory:
@@ -24,14 +18,16 @@ In your Rails app directory:
 Run: thin -h to get more options
 
 === License
-Ruby License : http://www.ruby-lang.org/en/LICENSE.txt
+Ruby License, http://www.ruby-lang.org/en/LICENSE.txt
 
 === Credits
-Lots of the code was inspired (or stolen entirely) from Mongrel http://mongrel.rubyforge.org/ by Zed Shaw.
+Lots of the code was inspired (or stolen entirely)
+from Mongrel http://mongrel.rubyforge.org/ by Zed Shaw.
+Also released under the Ruby license.
 
 Thin was created by:
 Marc-Andre Cournoyer
 macournoyer@gmail.com
 http://macournoyer.com
 
-Please send me your comments, bug reports or love letters by email.
+Please report any bug using http://code.macournoyer.com/thin/trac.fcgi/newticket
