Add request tests from Mongrel and make them pass.
git-svn-id: http://code.macournoyer.com/svn/thin/trunk@329 ab7993de-5426-0410-a80b-baa00616f331

--- a/README
+++ b/README
@@ -30,7 +30,6 @@ either the terms of the GPL.
 transat/parser.rb was taken from Piston source code.
 Copyright (c) 2006 Francois Beausoleil <francois@teksol.info>
 
-Thin was created by:
-Marc-Andre Cournoyer - http://macournoyer.com
+Thin is copyright Marc-Andre Cournoyer <macournoyer@gmail.com>
 
 Please report any bug using http://code.macournoyer.com/thin/trac.fcgi/newticket
