Typo fix on the site [gary]. Add install rake tasks.
git-svn-id: http://code.macournoyer.com/svn/thin/trunk@368 ab7993de-5426-0410-a80b-baa00616f331

--- a/README
+++ b/README
@@ -3,12 +3,19 @@
 Tiny, fast & funny HTTP server
 
 === Installation
+For the latest stable version:
+
+ sudo gem install thin
+
+For the risky but so much cooler alpha version:
 
  sudo gem install thin --source http://code.macournoyer.com
 
-Or get the source:
+Or from source:
 
  svn co http://code.macournoyer.com/svn/thin/trunk thin
+ cd thin
+ rake install
 
 === Usage
 In your Rails app directory:
