Set version to 0.4.0, preparing for public release
git-svn-id: http://code.macournoyer.com/svn/thin/trunk@373 ab7993de-5426-0410-a80b-baa00616f331

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 == Thin
 Tiny, fast & funny HTTP server
 
-Thin is a web server written entirely in Ruby in the simplest.
+Thin is a web server written entirely in Ruby in the simplest way possible.
 It does as little as possible to serve your Rails application,
 which makes it one of the fastest Rails server out there.
 
