Update README to reflect last changes
git-svn-id: http://code.macournoyer.com/svn/thin/trunk@402 ab7993de-5426-0410-a80b-baa00616f331

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 0.5.0
+ * Full rewrite to use EventMachine, Rack and Mongrel parser
+ 
 == 0.4.1
  * Fix Rails environment option not being used in thin script.
  
