--- a/README
+++ b/README
@@ -10,7 +10,7 @@ For the latest stable version:
 
  sudo gem install thin
 
-For the risky but so much cooler alpha version:
+or using my mirror:
 
  sudo gem install thin --source http://code.macournoyer.com
 
@@ -21,57 +21,22 @@ Or from source:
  rake install
 
 === Usage
-In your Rails app directory:
+In your app directory:
   
  thin start
 
 See http://code.macournoyer.com/thin/doc/files/bin/thin.html
 
-=== Deployment
-To deploy your Rails application using a cluster of thin servers. You can start it with:
-
- thin_cluster start
-
-To use the Capistrano recipes, add this to your Capfile:
-
- require 'thin'
- require 'thin/recipes'
-
-and create a config file using:
-
- thin_cluster config
-
-See http://code.macournoyer.com/thin/doc/files/bin/thin_cluster.html
-
-=== Security
-Thin should never be used facing the internet directly, it should always be hidden behind a
-proxy server!
-
-Thin is faster because it doesn't do a lot of things that other Ruby web servers do
-(use threads, validate the body length, be very strict about the request format, etc.)
-but that a good proxy server do very well (and a lot faster then any Ruby code could possibly do).
-So it is very important that you setup you proxy server correctly in order to secure Thin
-from potential attacks.
-
-Nginx comes with everything you need and can be used securely out of the box with thin.
-
-Apache mod_proxy is not secure because it doesn't cache the request before sending it
-to the backend, which open your server to easy DoS attacks.
-You need to install mod_accel (http://sysoev.ru/en/) to make mod_proxy behave like Nginx
-on that side.
-
 === License
 Ruby License, http://www.ruby-lang.org/en/LICENSE.txt.
 
 === Credits
-Lots of the code was inspired (or stolen entirely) from Mongrel http://mongrel.rubyforge.org by Zed Shaw.
+The parser was stolen from Mongrel http://mongrel.rubyforge.org by Zed Shaw.
 Mongrel Web Server (Mongrel) is copyrighted free software by Zed A. Shaw
 <zedshaw at zedshaw dot com> You can redistribute it and/or modify it under
 either the terms of the GPL.
 
-transat/parser.rb was taken from Piston source code.
-Copyright (c) 2006 Francois Beausoleil <francois@teksol.info>
-
 Thin is copyright Marc-Andre Cournoyer <macournoyer@gmail.com>
 
 Please report any bug at http://code.macournoyer.com/thin/trac.fcgi/newticket
+and security issues directly to me at macournoyer@gmail.com.
