Move more request processing to the C parser. Add request validation through Rack::Lint.
git-svn-id: http://code.macournoyer.com/svn/thin/trunk@412 ab7993de-5426-0410-a80b-baa00616f331

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,4 +5,4 @@
  * Fix Rails environment option not being used in thin script.
  
 == 0.4.0
- * First public release.
+ * First alphaish release as a gem.
