Set gemspec to use EventMachine version 0.8.1 as it's the latest one having precompiled windows binaries. Recommended by Francis Cianfrocca.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== 0.5.1
+ * Set gemspec to use EventMachine version 0.8.1 as it's the latest one having precompiled windows binaries.
+   Recommended by Francis Cianfrocca.
+
 == 0.5.0
  * Full rewrite to use EventMachine, Rack and Mongrel parser
  
