Restore usage and download pages on web site. Ignore pkg dir.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
 == BUGS
  * Cookies can't be shared across subdomains
- * Usage and download pages disapeared from thin.rb
- * Investigate Thin beeing a lot slower on Ruby 1.9, but some ppl say EM should be 50% faster, wtf?!
+ * Investigate Thin being a lot slower on Ruby 1.9, but some ppl say EM should be 50% faster, wtf?!
