Add --prefix task to TODO

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 == FEATURES
  * Add builtin cluster monitoring support (with god ?)
  * Add automated benchmarks & run along w/ specs
+ * Add --prefix option to thin script
