--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,12 @@
-== 0.5.1
+== 0.5.2 Cheezburger release
+ * Rename thin script options to be the same as mongrel_rails script:
+   -o --host  => -a --address
+   --log-file => --log
+   --pid-file => --pid
+   --env      => --environment
+   [thronedrk]
+ 
+== 0.5.1 LOLCAT release
  * Add URL rewriting to Rails adapter so that page caching works and / fetches index.html if present.
  * Fix bug in multiline response header parsing.
  * Add specs for the Rails adapter.
