--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
 == 0.5.2 Cheezburger release
+ * Fix IOError when writing to logger when starting server as a daemon.
+ * Really change directory when the -c option is specified.
+ * Add restart command to thin script.
  * Fix typo in thin script usage message and expand chdir path.
  * Rename thin script options to be the same as mongrel_rails script:
    -o --host  => -a --address
