--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,14 +1,17 @@
 == 0.5.2 Cheezburger release
+ * Add cluster support through the -s option in the thin script, start 3 thins like this:
+    thin start -s3 -p3000
+   3 thin servers will be started on port 3000, 3001, 3002, also the port number will be
+   injected in the pid and log filenames.
  * Fix IOError when writing to logger when starting server as a daemon.
  * Really change directory when the -c option is specified.
  * Add restart command to thin script.
  * Fix typo in thin script usage message and expand chdir path.
- * Rename thin script options to be the same as mongrel_rails script:
-   -o --host  => -a --address
-   --log-file => --log
-   --pid-file => --pid
-   --env      => --environment
-   [thronedrk]
+ * Rename thin script options to be the same as mongrel_rails script [thronedrk]:
+     -o --host  => -a --address
+     --log-file => --log
+     --pid-file => --pid
+     --env      => --environment
  
 == 0.5.1 LOLCAT release
  * Add URL rewriting to Rails adapter so that page caching works and / fetches index.html if present.
