Fixing typo in James last name, aye sry!

--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@
 == TASKS
  * Provide precompiled win32 binaries in Gem
  * Load options from a config file
+ * Create a Stats adapter to show server stats in the browser
  * Check for memory usage/leaks using dike or other.
  * Change benchmarking tests to use
    http://blog.evanweaver.com/files/doc/fauna/benchmark_unit/
