--- a/README
+++ b/README
@@ -13,13 +13,13 @@ For the latest stable version:
 
  sudo gem install thin
 
-or using my mirror (might be more recent):
+or using my mirror (might be more recent and unstable):
 
  sudo gem install thin --source http://code.macournoyer.com
 
 Or from source:
 
- git clone git://repo.or.cz/thin.git
+ git clone git://github.com/macournoyer/thin.git
  cd thin
  rake install
 
@@ -36,7 +36,14 @@ You need to setup a config.ru file and require thin in it:
  require 'thin'
  
  app = proc do |env|
-  [200, {'Content-Type'=>'text/html'}, ['hi']]
+  [
+    200,
+    {
+      'Content-Type' => 'text/html',
+      'Content-Length' => '2'
+    },
+    ['hi']
+  ]
  end
  
  run app
@@ -56,5 +63,6 @@ either the terms of the GPL.
 
 Thin is copyright Marc-Andre Cournoyer <macournoyer@gmail.com>
 
-Please report any bug at http://groups.google.com/group/thin-ruby/
-and major security issues directly to me at macournoyer@gmail.com.
+Get help at http://groups.google.com/group/thin-ruby/
+Report bugs at http://thin.lighthouseapp.com/projects/7212-thin
+and major security issues directly to a team member (see COMMITTERS)
