--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 == 0.5.5 Pony release
- * Add --config option to load options from a config file in thin script [Matt Todd].
+ * Add --trace (-V) option to trace request/response and get backtrace w/out all Ruby debug stuff.
+ * Add --config (-C) option to load options from a config file in thin script [Matt Todd].
  * Alter response headers to output directly to a string.
  * Improve specs stability.
  * Move request body to a Tempfile if too big (> 112 MB)
