--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 0.6.0 Bionic Pickle release
+ * Persistent connection (keep-alive) & HTTP pipelining support
+
 == 0.5.5 Pony release
  * Add support for connection through UNIX domain socket.
    Use the --socket (-S) option w/ the thin script to configure the socket filename.
