Improve announcement email generation.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,7 +14,7 @@
  * Add --only (-o) option to control only one server of a cluster.
  * Stylize stats page and make the url configurable from the thin script.
  * Raise error if attempting to use unix sockets on windows.
- * Add example config files for http://www.tildeslash.com/monit useage.
+ * Add example config files for http://www.tildeslash.com/monit usage.
    Include the example file using "include /path/to/thin/monit/file" in your monitrc file.
    The group settings let you do this to manage your clusters:
    
