--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 0.7.0 Bionic Pickle release
+ * Add Swiftiply support. Use w/ the --swiftiply (-y) option in the thin script.
+
 == 0.6.3 Ninja Cookie release
  * Add tasks for Vlad the Deployer in example/vlad.rake [cnantais]
  * Add Ramaze Rackup config file in example dir [tmm1]
