Add ticket ref and contributor name.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 == 0.7.0 Bionic Pickle release
- * Add Swiftiply support. Use w/ the --swiftiply (-y) option in the thin script.
+ * Add Swiftiply support. Use w/ the --swiftiply (-y) option in the thin script,
+   closes #28 [Alex MacCaw]
 
 == 0.6.3 Ninja Cookie release
  * Add tasks for Vlad the Deployer in example/vlad.rake [cnantais]
