--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 0.6.4 Sexy Lobster release
+ * Rescue errors in Connection#get_peername more gracefully, setting REMOTE_ADDR to nil, fixes #43
+
 == 0.6.3 Ninja Cookie release
  * Add tasks for Vlad the Deployer in example/vlad.rake [cnantais]
  * Add Ramaze Rackup config file in example dir [tmm1]
