Change release name to Spherical Cow [Jeremy Hinegardner]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-== 0.7.0 Bionic Pickle release
+== 0.7.0 Spherical Cow release
  * Wrap application in a Rack::CommonLogger adapter in debug mode.
  * --debug (-D) option no longer set $DEBUG so logging will be less verbose
    and Ruby won't be too strict, fixes #36.
