keep-alive != pipelining

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,7 +13,7 @@
  * --debug (-D) option no longer set $DEBUG so logging will be less verbose
    and Ruby won't be too strict, fixes #36.
  * Deprecate Server#silent in favour of Logging.silent.
- * Persistent connection (keep-alive) & HTTP pipelining support.
+ * Persistent connection (keep-alive) support.
  * Fix -s option not being included in generated config file, fixes #37.
  * Add Swiftiply support. Use w/ the --swiftiply (-y) option in the thin script,
    closes #28 [Alex MacCaw]
