Fix high memory usage with big POST body. Bump version number to 0.7.1.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 0.7.1 Fancy Pants release
+ * Fix high memory usage with big POST body.
+
 == 0.7.0 Spherical Cow release
  * Add --max-persistent-conns option to sets the maximum number of persistent connections.
    Set to 0 to disable Keep-Alive.
